# crm_backend

./: .env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 471bdc3c5b51_add_insurance_details_table.py  6cd12cae8c96_initial_migration.py  b7538fce8343_add_geom_column.py
app/: main.py
app/api/v1/: property_routes.py  router.py
app/api/v1/endpoints/: map.py  property.py
app/core/: config.py  logging_config.py  neo4j.py
app/db/: database.py  session.py
app/db/models/: __init__.py  insurance_details.py  location.py  owner.py  property.py
app/repositories/: location_repo.py  owner_repo.py  property_repo.py
app/schemas/: full_entry_response_schema.py  full_entry_schema.py  location_create_schema.py  location_request.py  location_schema.py  map_schema.py  owner_create_schema.py  owner_schema.py  owner_update_schema.py  property_create_schema.py  property_owner_response.py  property_owner_response_schema.py  property_schema.py  property_update_request.py  property_update_schema.py
app/services/: location_service.py  property_service.py
